Fix text-align line

--- a/graphit/app/assets/stylesheets/create_graph_input.css
+++ b/graphit/app/assets/stylesheets/create_graph_input.css
@@ -19,7 +19,7 @@
 
 .graph-input-form-section h2{
   margin: 0 30px 60px 30px;
-  text-align: ;
+  text-align: center;
 }
 
 .graph-input-form{
